--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2f5e8d150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89be777110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2f5bab550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2f5b6df90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89be47cb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89be47cf90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2f6147290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2f60fb4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89bea15250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89bea15450&gt;]</pre>
 </div>
 
 </div>
