--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0162ba590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc0cf8fcd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0166d22d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0166d2490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0d3a90d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc0d3c02d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa016cd4a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa016c7f6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0d9b9a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc0d953750&gt;]</pre>
 </div>
 
 </div>
