--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a90f5bc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b74726450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a91249b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a91249d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b74b3b8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b74b3ba10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a917f3410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a917f3610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b750d13d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b750d15d0&gt;]</pre>
 </div>
 
 </div>
