--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74a6923610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f751896fb90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f74a6d40090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f74a6d40f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7517aacb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7517aacf90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f74a72e21d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f74a72e23d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f75180432d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f75180434d0&gt;]</pre>
 </div>
 
 </div>
