--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe24378ed10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb8d7cbded0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2430eb8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2430ebe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb8d7923ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb8d7923ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2436a2350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2436a2550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb8d7ec3190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb8d7ec3390&gt;]</pre>
 </div>
 
 </div>
