--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdfc15ae3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7774882e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfc18974d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdfc1897dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7774b76d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7774b76850&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfc1e362d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdfc1e36490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f777510b390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f777510b1d0&gt;]</pre>
 </div>
 
 </div>
