--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8facb12950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70cc6d9b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8facdf8290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8facdf85d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70ccaf6890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70ccaf6610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fad3a5390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8fad3a5590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70cd096450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70cd096650&gt;]</pre>
 </div>
 
 </div>
