--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0dd7d0ac90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feec79fa2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dd8025990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dd7fd9990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feec7e0fad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feec7e1ef50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dd85c6150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dd85788d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feec8422390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feec83ac490&gt;]</pre>
 </div>
 
 </div>
