--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa546acb510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25af2c3b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa546de0350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa546dba0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f25af6c6c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f25af6c6e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa54739da10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa54734f5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f25afc68550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f25afc68750&gt;]</pre>
 </div>
 
 </div>
