--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d08f9c5d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3ce53b510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d0929bb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d09298d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3ceb01d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3ceb01e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d098a4410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d0982e510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3cf0ac210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3cf0ac410&gt;]</pre>
 </div>
 
 </div>
