--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a5af69b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12143c9510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a5b37be10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a5b37bb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1213d40690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1213d40650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a5b910490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a5b9106d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12142df550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12142df750&gt;]</pre>
 </div>
 
 </div>
