--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe2e2f5e7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cec660f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2e337f990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2e337f5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ceb770b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2ceb770fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2e390d350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2e390d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cebd18250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cebd18450&gt;]</pre>
 </div>
 
 </div>
