--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cec660f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a84c3ad90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ceb770b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ceb770fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a84f0fa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a84f0fc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cebd18250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cebd18450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a854b92d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a854b94d0&gt;]</pre>
 </div>
 
 </div>
