--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83b4b66390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f63fa601350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83b4f77050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83b4f77290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f63fa9e8210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f63faa12e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83b550a590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83b550a790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f63fa9fc290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f63fafa7590&gt;]</pre>
 </div>
 
 </div>
