--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f02926552d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96e0b72950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0292a54b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0292a54d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f96e04e2d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f96e04e2fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0292ffd450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0292ffd650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f96e0a82350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f96e0a82550&gt;]</pre>
 </div>
 
 </div>
