--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96e0b72950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6422676590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f96e04e2d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96e04e2fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6422a8f590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6422a8f990&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f96e0a82350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96e0a82550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f64230211d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f64230213d0&gt;]</pre>
 </div>
 
 </div>
