--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2db53e450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f480a311fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2daecd9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2daecd7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f480a61e890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f480a61ebd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2db45e310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2db45e110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f480abbd310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f480abbd510&gt;]</pre>
 </div>
 
 </div>
