--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe0aa445f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff71f2db950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0aa809210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe0aa80de90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff71f5c2390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff71f5c2610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0aadbb3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe0aae1fad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff71fb74210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff71fb74410&gt;]</pre>
 </div>
 
 </div>
