--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff71f2db950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe608a36350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff71f5c2390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff71f5c2610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe608704a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe608704c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff71fb74210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff71fb74410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe608cad410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe608cad610&gt;]</pre>
 </div>
 
 </div>
